--- a/Project/index.html
+++ b/Project/index.html
@@ -30,7 +30,7 @@
             <div class="options">
                 
                 <div class="lib-option nav-option"><!--by adding above class properties are also transfered-->
-                    <img src="library_icon.png" alt="library">
+                    <img src="asset/library_icon.png" alt="library">
                     <a href="#">Your library</a>
                 </div>
                 
